[gd_scene load_steps=5 format=3 uid="uid://4vhlbg375urc"]

[ext_resource type="Script" path="res://Scenes/UI/Inventory/InventoryUI.gd" id="1_a7i1o"]
[ext_resource type="PackedScene" uid="uid://nje37fe1rrsn" path="res://Scenes/UI/Inventory/PlayerEquipment.tscn" id="2_xtxin"]
[ext_resource type="PackedScene" uid="uid://ul6gwh7jcld2" path="res://Scenes/UI/Inventory/Inventory.tscn" id="3_e4rt2"]
[ext_resource type="PackedScene" uid="uid://ubl64gd04tjy" path="res://Scenes/UI/Inventory/InventorySlot.tscn" id="4_pl20i"]

[node name="InventoryWrapper" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_a7i1o")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 310.0
offset_bottom = 170.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 6
alignment = 1

[node name="PlayerEquipment" parent="CanvasLayer/HBoxContainer" instance=ExtResource("2_xtxin")]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
mouse_filter = 2

[node name="PlayerInventory" parent="CanvasLayer/HBoxContainer" instance=ExtResource("3_e4rt2")]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
mouse_filter = 2

[node name="ExternalInventory" parent="CanvasLayer/HBoxContainer" instance=ExtResource("3_e4rt2")]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
mouse_filter = 2

[node name="GrabbedSlot" parent="CanvasLayer" instance=ExtResource("4_pl20i")]
visible = false
